# src/controllers/Default.ts
@@ -1,19 +1,20 @@
 'use strict';
 
-import { writeJson } from "../utils/writer";
+import { writeJson, sendStatus } from "../utils/writer";
 
 import * as AccountService from "../service/AccountService";
 import * as NoteService from "../service/NoteService"
 import * as SharedNotesService from "../service/SharedNotesService"
 import { getAccountUuid } from "../utils/authentication";
+import { ServerResponse } from "http";
 
-export function createAccount(req: any, res: any, next: any, account: Partial<Account>) {
+export function createAccount(req: Request, res: ServerResponse, next: any, account: Partial<Account>) {
 	AccountService.createAccount(account)
 		.then(newAccount => writeJson(res, newAccount.toJSON()))
 		.catch(message => writeJson(res, message, 403));
 };
 
-export function createNewNote(req: any, res: any, next: any) {
+export function createNewNote(req: Request, res: ServerResponse, next: any) {
 	const accountUuid = getAccountUuid(req, res)
 	if (accountUuid) {
 		NoteService.createNewNote(accountUuid)
@@ -22,17 +23,17 @@ export function createNewNote(req: any, res: any, next: any) {
 	}
 };
 
-module.exports.deleteNoteById = function deleteNoteById(req: any, res: any, next: any, noteUUID: any) {
-	NoteService.deleteNoteById(noteUUID)
-		.then(function (response: any) {
-			writeJson(res, response);
-		})
-		.catch(function (response: any) {
-			writeJson(res, response);
-		});
+export function deleteNoteById(req: Request, res: ServerResponse, next: any, noteUUID: string) {	
+	console.log("coucou")
+	const accountUuid = getAccountUuid(req, res)
+	if (accountUuid) {
+		NoteService.deleteNoteById(noteUUID, accountUuid)
+		.then(() => sendStatus(res, 200))
+		.catch(message => writeJson(res, message, 404));
+	}
 };
 
-export function getAllNoteMetadata(req: any, res: any, next: any) {
+export function getAllNoteMetadata(req: Request, res: ServerResponse, next: any) {
 	const accountUuid = getAccountUuid(req, res)
 	if (accountUuid) {
 		NoteService.getAllNoteMetadata(accountUuid)
@@ -41,7 +42,7 @@ export function getAllNoteMetadata(req: any, res: any, next: any) {
 	}
 };
 
-module.exports.getAllSharedNoteMetadata = function getAllSharedNoteMetadata(req: any, res: any, next: any) {
+module.exports.getAllSharedNoteMetadata = function getAllSharedNoteMetadata(req: Request, res: ServerResponse, next: any) {
 	SharedNotesService.getAllSharedNoteMetadata()
 		.then(function (response: any) {
 			writeJson(res, response);
@@ -51,7 +52,7 @@ module.exports.getAllSharedNoteMetadata = function getAllSharedNoteMetadata(req:
 		});
 };
 
-module.exports.getNoteContentById = function getNoteContentById(req: any, res: any, next: any, noteUUID: any) {
+module.exports.getNoteContentById = function getNoteContentById(req: Request, res: ServerResponse, next: any, noteUUID: any) {
 	NoteService.getNoteContentById(noteUUID)
 		.then(function (response: any) {
 			writeJson(res, response);
@@ -61,17 +62,16 @@ module.exports.getNoteContentById = function getNoteContentById(req: any, res: a
 		});
 };
 
-module.exports.getNoteMetadataById = function getNoteMetadataById(req: any, res: any, next: any, noteUUID: any) {
-	NoteService.getNoteMetadataById(noteUUID)
-		.then(function (response: any) {
-			writeJson(res, response);
-		})
-		.catch(function (response: any) {
-			writeJson(res, response);
-		});
+export function getNoteMetadataById(req: Request, res: ServerResponse, next: any, noteUUID: any) {
+	const accountUuid = getAccountUuid(req, res)
+	if (accountUuid) {
+		NoteService.getNoteMetadataById(noteUUID, accountUuid)
+		.then(meta => writeJson(res, meta.toJSON()))
+		.catch(message => writeJson(res, message, 404));
+	}
 };
 
-module.exports.getSharedNoteContentById = function getSharedNoteContentById(req: any, res: any, next: any, noteUUID: any) {
+module.exports.getSharedNoteContentById = function getSharedNoteContentById(req: Request, res: ServerResponse, next: any, noteUUID: any) {
 	SharedNotesService.getSharedNoteContentById(noteUUID)
 		.then(function (response: any) {
 			writeJson(res, response);
@@ -81,7 +81,7 @@ module.exports.getSharedNoteContentById = function getSharedNoteContentById(req:
 		});
 };
 
-module.exports.getSharedNoteMetadataById = function getSharedNoteMetadataById(req: any, res: any, next: any, noteUUID: any) {
+module.exports.getSharedNoteMetadataById = function getSharedNoteMetadataById(req: Request, res: ServerResponse, next: any, noteUUID: any) {
 	SharedNotesService.getSharedNoteMetadataById(noteUUID)
 		.then(function (response: any) {
 			writeJson(res, response);
@@ -91,7 +91,7 @@ module.exports.getSharedNoteMetadataById = function getSharedNoteMetadataById(re
 		});
 };
 
-module.exports.updateNoteContentById = function updateNoteContentById(req: any, res: any, next: any, noteUUID: any) {
+module.exports.updateNoteContentById = function updateNoteContentById(req: Request, res: ServerResponse, next: any, noteUUID: any) {
 	NoteService.updateNoteContentById(noteUUID)
 		.then(function (response: any) {
 			writeJson(res, response);
@@ -101,7 +101,7 @@ module.exports.updateNoteContentById = function updateNoteContentById(req: any, 
 		});
 };
 
-module.exports.updateNoteMetadataById = function updateNoteMetadataById(req: any, res: any, next: any, body: any, noteUUID: any) {
+module.exports.updateNoteMetadataById = function updateNoteMetadataById(req: Request, res: ServerResponse, next: any, body: any, noteUUID: any) {
 	NoteService.updateNoteMetadataById(body, noteUUID)
 		.then(function (response: any) {
 			writeJson(res, response);
@@ -111,7 +111,7 @@ module.exports.updateNoteMetadataById = function updateNoteMetadataById(req: any
 		});
 };
 
-module.exports.updateSharedNoteContentById = function updateSharedNoteContentById(req: any, res: any, next: any, noteUUID: any) {
+module.exports.updateSharedNoteContentById = function updateSharedNoteContentById(req: Request, res: ServerResponse, next: any, noteUUID: any) {
 	SharedNotesService.updateSharedNoteContentById(noteUUID)
 		.then(function (response: any) {
 			writeJson(res, response);
